# calculator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multiplatform.yml  release.yml
src/: error.hpp  evaluator.cpp  evaluator.hpp  lexer.cpp  lexer.hpp  main.cpp  main_gui.cpp  parser.cpp  parser.hpp
src/ast/: binary_op.hpp  func_call.hpp  node.hpp  number.hpp  unary_op.hpp
src/gui/: CalculatorButton.cpp  CalculatorButton.hpp  CalculatorMode.hpp  CalculatorWidget.cpp  CalculatorWidget.hpp  MainWindow.cpp  MainWindow.hpp  ModeMenu.cpp  ModeMenu.hpp  NumberConverter.cpp  NumberConverter.hpp  ProgrammerModeWidget.cpp  ProgrammerModeWidget.hpp  ScientificModeWidget.cpp  ScientificModeWidget.hpp  StandardModeWidget.cpp  StandardModeWidget.hpp  styles.qss  styles_dark.qss  styles_light.qss
tests/: test_calculator.cpp
